Fix import feed.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -91,6 +91,7 @@
   "feeds_empty": "This feels empty; create a feed to appear here.",
   "feeds_new": "New feed",
   "feeds_edit": "Edit feed {feed}",
+  "feeds_delete": "Delete feed",
   "@feeds_edit": {
     "placeholders": {
       "feed": {
