--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -74,7 +74,7 @@
   "feedView": "Feed View",
   "threads": "Threads",
   "microblog": "Microblog",
-  "timeline": "Timeline",
+  "combined": "Combined",
   "stars": "Stars",
   "stars_empty": "This feels empty; star a community or user to appear here.",
   "subscriptions": "Subscriptions",
@@ -277,6 +277,7 @@
   "settings_feedDefaults_filter": "Filter",
   "settings_feedDefaults_threadsSort": "Threads Sort",
   "settings_feedDefaults_microblogSort": "Microblog Sort",
+  "settings_feedDefaults_combinedSort": "Combined Sort",
   "settings_feedDefaults_exploreSort": "Explore Sort",
   "settings_feedDefaults_commentSort": "Comment Sort",
   "settings_feedDefaults_hideReadPosts": "Hide read posts",
