Feed screen shows feed name in appbar. Add localised string. Move explore feed inputs select functionality into explore screen.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -101,6 +101,7 @@
   },
   "feeds_input": "Add input",
   "feeds_import": "Import feed",
+  "feeds_selectInputs": "Select inputs",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "comment": "Comment",
