Revert "Rename timeline to combined."
This reverts commit 08fbaee7e270bdfe5283ac005b5a6d114b69dfb2.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -74,7 +74,7 @@
   "feedView": "Feed View",
   "threads": "Threads",
   "microblog": "Microblog",
-  "combined": "Combined",
+  "timeline": "Timeline",
   "stars": "Stars",
   "stars_empty": "This feels empty; star a community or user to appear here.",
   "subscriptions": "Subscriptions",
@@ -280,7 +280,6 @@
   "settings_feedDefaults_filter": "Filter",
   "settings_feedDefaults_threadsSort": "Threads Sort",
   "settings_feedDefaults_microblogSort": "Microblog Sort",
-  "settings_feedDefaults_combinedSort": "Combined Sort",
   "settings_feedDefaults_exploreSort": "Explore Sort",
   "settings_feedDefaults_commentSort": "Comment Sort",
   "settings_feedDefaults_hideReadPosts": "Hide read posts",
