--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -662,5 +662,6 @@
   "errorPage_firstPage": "Something went wrong",
   "errorPage_firstPage_button": "Try Again",
   "errorPage_newPage": "Something went wrong. Tap to try again.",
-  "errorPage_caughtUp": "You're all caught up.\nLoad older items?"
+  "errorPage_caughtUp": "You're all caught up.\nLoad older items?",
+  "exitMessage": "Press BACK again to exit."
 }
