Change context menu in community screen to user new context menu. Add context menu to user screen. Add 'add to feed' options to user/community menus.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -102,6 +102,7 @@
   "feeds_input": "Add input",
   "feeds_import": "Import feed",
   "feeds_selectInputs": "Select inputs",
+  "feeds_addTo": "Add to feed",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "comment": "Comment",
