Add piefed topics support.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,6 +12,8 @@
   "login": "Login",
   "totpToken": "TOTP Token (if needed)",
   "cancel": "Cancel",
+  "rename": "Rename",
+  "replace": "Replace",
   "continue_": "Continue",
   "remove": "Remove",
   "guest": "Guest",
@@ -89,6 +91,7 @@
   "subscriptions_domain_empty": "This feels empty; subscribe to a domain to appear here.",
   "feeds": "Feeds",
   "feeds_empty": "This feels empty; create a feed to appear here.",
+  "feeds_exist": "Existing feed",
   "feeds_new": "New feed",
   "feeds_edit": "Edit feed {feed}",
   "feeds_delete": "Delete feed",
@@ -103,6 +106,10 @@
   "feeds_import": "Import feed",
   "feeds_selectInputs": "Select inputs",
   "feeds_addTo": "Add to feed",
+  "topics": "Topics",
+  "topic": "Topic",
+  "server": "Server",
+  "client": "Client",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "comment": "Comment",
