Adds default downloads directory option. Adds longpress callback to loading icon button.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -216,6 +216,7 @@
   "settings_markMicroblogsReadOnScroll": "Mark microblogs read on scroll",
   "settings_animationSpeed": "Animation speed",
   "settings_animationDisabled": "Disabled",
+  "settings_defaultDownloadDir": "Default download directory",
   "settings_themeMode": "Theme mode",
   "settings_themeMode_system": "System",
   "settings_themeMode_light": "Light",
