--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -225,6 +225,8 @@
   "settings_animationSpeed": "Animation speed",
   "settings_animationDisabled": "Disabled",
   "settings_inlineReplies": "Reply inline",
+  "settings_crosspostComments": "Show crosspost comment sections",
+  "settings_crossPostMarkAsRead": "Mark crossposts as read",
   "settings_defaultDownloadDir": "Default download directory",
   "settings_themeMode": "Theme mode",
   "settings_themeMode_system": "System",
