--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -110,6 +110,9 @@
   "topic": "Topic",
   "server": "Server",
   "client": "Client",
+  "clientFeed": "Client feed",
+  "serverFeed": "Server feed",
+  "serverTopic": "Server topic",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "comment": "Comment",
