Add explanations for client/server feeds/topic.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -111,8 +111,11 @@
   "server": "Server",
   "client": "Client",
   "clientFeed": "Client feed",
+  "clientFeedSubtitle": "Feed inputs are fetched and merged locally on device. Can be used across instances.",
   "serverFeed": "Server feed",
+  "serverFeedSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed feed.",
   "serverTopic": "Server topic",
+  "serverTopicSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed topic.",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "comment": "Comment",
