Piefed feeds API (#250)
* Initial support for piefed feeds api.

* Add enabled attribute to LoadingListTile.
Disable nav drawer feed items if piefed feed and not logged into piefed.
Fetch nav drawer state on feed load rather than on first access of nav drawer.

* Workaround to limit piefed feeds to original instances without ability to get by name.

* Add piefed topics support.

* Formatting

* Fix wrong feedsource when opening topics.

* Make explore type selector scrollable

* Add check for topic in client/server feed type check.
Limit adding users/communities to client feeds from their respective pages.

* Fix up merge

* Minor updates to PieFed feeds API.

* Update topics api for piefed 1.2

* Disable feeds/topics in navdrawer and settings which aren't available on logged in instance.

* Hide subscription button for feeds/topics.
Grey out search bar and sort/filter options on feeds/topics.
Hide explore search/filters when navigating from add server feed/topic.

* Fix localisations.

* Add explanations for client/server feeds/topic.

* Store full activitypub id/handle for feeds/topics.
Store feed/topic id separately.
Fix feeds/topics not showing selected status in explore screen.

* Fix feed share.

* Use machine_name as feed name and title/name as the feed title

* Update serverFeed getter to check if all inputs are piefed feeds.

* Revert "Use machine_name as feed name and title/name as the feed title"

This reverts commit 7d07f3535c97e803acab6c6dcc0a03a617013832.

* Change feed title to not optional (based on swagger docs)

* Remove redundant name field.

---------

Co-authored-by: jwr1 <47087725+jwr1@users.noreply.github.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,6 +12,8 @@
   "login": "Login",
   "totpToken": "TOTP Token (if needed)",
   "cancel": "Cancel",
+  "rename": "Rename",
+  "replace": "Replace",
   "continue_": "Continue",
   "remove": "Remove",
   "guest": "Guest",
@@ -89,6 +91,7 @@
   "subscriptions_domain_empty": "This feels empty; subscribe to a domain to appear here.",
   "feeds": "Feeds",
   "feeds_empty": "This feels empty; create a feed to appear here.",
+  "feeds_exist": "Existing feed",
   "feeds_new": "New feed",
   "feeds_edit": "Edit feed {feed}",
   "feeds_delete": "Delete feed",
@@ -103,6 +106,16 @@
   "feeds_import": "Import feed",
   "feeds_selectInputs": "Select inputs",
   "feeds_addTo": "Add to feed",
+  "topics": "Topics",
+  "topic": "Topic",
+  "server": "Server",
+  "client": "Client",
+  "clientFeed": "Client feed",
+  "clientFeedSubtitle": "Feed inputs are fetched and merged locally on device. Can be used across instances.",
+  "serverFeed": "Server feed",
+  "serverFeedSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed feed.",
+  "serverTopic": "Server topic",
+  "serverTopicSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed topic.",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "crossPosts": "Crossposts",
