Add more database debug options. Rename some tables.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -337,9 +337,12 @@
   "settings_enableSwipeActions": "Enable Swipe Actions",
   "settings_swipeThreshold": "Swipe Action Threshold",
   "settings_debug_showErrors": "Show Errors",
+  "settings_debug_inspectDatabase": "Inspect database",
   "settings_debug_clearDatabase": "Clear database",
   "settings_debug_clearAccounts": "Clear accounts",
   "settings_debug_clearProfiles": "Clear profiles",
+  "settings_debug_clearReadPosts": "Clear read posts",
+  "settings_debug_clearFeedCache": "Clear feed cache",
   "settings_debug_log": "Log",
   "profiles": "Profiles",
   "profile_switch": "Switch profiles",
