--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -284,6 +284,8 @@
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
   "settings_fullImageSizeThreads": "Full image size for threads",
   "settings_fullImageSizeMicroblogs": "Full image size for microblogs",
+  "settings_postsAsCards": "Show posts as cards",
+  "settings_postLayoutOrder": "Post layout order",
   "settings_reduceAnimationMotion": "Reduce motion in animations",
   "settings_aboutInterstellar": "About Interstellar",
   "settings_donate": "Donate",
