Change explore screen title when searching specific source.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -158,6 +158,14 @@
     }
   },
   "search": "Search",
+  "searchSource": "Search {source}",
+  "@searchSource": {
+    "placeholders": {
+      "source": {
+        "type": "String"
+      }
+    }
+  },
   "communities": "Communities",
   "people": "People",
   "domains": "Domains",
