Move login callback to controller. Add view with button to trigger relogin on oauth error.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,6 +10,7 @@
   "usernameOrEmail": "Username or Email",
   "password": "Password",
   "login": "Login",
+  "refreshAuth": "Refresh login",
   "totpToken": "TOTP Token (if needed)",
   "cancel": "Cancel",
   "rename": "Rename",
@@ -738,6 +739,7 @@
   "errorPage_firstPage_button": "Try Again",
   "errorPage_newPage": "Something went wrong. Tap to try again.",
   "errorPage_caughtUp": "You're all caught up.\nLoad older items?",
+  "errorPage_authError": "Looks like there was an issue with account authorization.\nPress the button below to refresh auth.",
   "exitMessage": "Press BACK again to exit.",
   "pushNotificationsDialog_title": "Push Notifications",
   "pushNotificationsDialog_noDistributor": "You need to install a UnifiedPush distributor for push notifications to work.\nYou can find more information at: {url}",
