Allow feed sources and feed views to be reorderable.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -347,6 +347,8 @@
   "settings_feedDefaults_exploreSort": "Explore Sort",
   "settings_feedDefaults_commentSort": "Comment Sort",
   "settings_feedDefaults_hideReadPosts": "Hide read posts",
+  "settings_feedSourceOrder": "Feed source order",
+  "settings_feedViewOrder": "Feed view order",
   "settings_swipeActionLeftShort": "Left Short",
   "settings_swipeActionLeftLong": "Left Long",
   "settings_swipeActionRightShort": "Right Short",
