--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -278,6 +278,7 @@
   "settings_hideActionButtons": "Hide action buttons",
   "settings_hideActionButtons_help": "Hides the action buttons (vote, boost, reply, etc.) below each post and comment. The controls are still accessible in the overflow menu. It is recommended to enable swipe gestures in unison with this setting.",
   "settings_hideFeedUIOnScroll": "Hide feed UI on scroll",
+  "settings_dividerThickness": "Divider thickness",
   "settings_globalTextScale": "Global text scale",
   "settings_alwaysShowInstance": "Always show instance",
   "settings_alwaysShowInstance_help": "When enabled, the instance of a user/community will always display after their username",
