--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -288,12 +288,15 @@
   "settings_hideActionButtons": "Hide action buttons",
   "settings_hideActionButtons_help": "Hides the action buttons (vote, boost, reply, etc.) below each post and comment. The controls are still accessible in the overflow menu. It is recommended to enable swipe gestures in unison with this setting.",
   "settings_hideFeedUIOnScroll": "Hide feed UI on scroll",
+  "settings_dividerThickness": "Divider thickness",
   "settings_globalTextScale": "Global text scale",
   "settings_alwaysShowInstance": "Always show instance",
   "settings_alwaysShowInstance_help": "When enabled, the instance of a user/community will always display after their username",
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
   "settings_fullImageSizeThreads": "Full image size for threads",
   "settings_fullImageSizeMicroblogs": "Full image size for microblogs",
+  "settings_postsAsCards": "Show posts as cards",
+  "settings_postLayoutOrder": "Post layout order",
   "settings_reduceAnimationMotion": "Reduce motion in animations",
   "settings_aboutInterstellar": "About Interstellar",
   "settings_donate": "Donate",
