--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -117,6 +117,11 @@
   "serverFeedSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed feed.",
   "serverTopic": "Server topic",
   "serverTopicSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed topic.",
+  "tags_addNew": "Add new tag",
+  "tags_addExisting": "Add existing tag",
+  "tags_backgroundColor": "Background color",
+  "tags_textColor": "Text color",
+  "pickColor": "Pick a color",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "crossPosts": "Crossposts",
