--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -374,6 +374,7 @@
   "settings_debug_clearProfiles": "Clear profiles",
   "settings_debug_clearReadPosts": "Clear read posts",
   "settings_debug_clearFeedCache": "Clear feed cache",
+  "settings_debug_clearTags": "Clear user tags",
   "settings_debug_log": "Log",
   "profiles": "Profiles",
   "profile_switch": "Switch profiles",
