Add support for piefed polls. - Show poll posts. - Vote on posts. - Create posts.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -522,6 +522,12 @@
   "translate": "Translate",
   "user": "User",
   "subscribe": "Subscribe",
+  "poll": "Poll",
+  "addChoice": "Add choice",
+  "pollDuration": "Poll duration",
+  "pollMode": "Poll mode",
+  "pollMode_single": "Single choice",
+  "pollMode_multiple": "Multiple choice",
   "action_setLocation": "Set Action Location",
   "action_hide": "Hide",
   "action_appBar": "App Bar",
