- Remove foreground colour selector for tags, auto choose white/black based on background luminance. - Remove add redundant add new tag on user_tags screen. - Move add tags buttons to top of respective screens so don't have to scroll. - Database adjustments for tags.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -118,9 +118,8 @@
   "serverTopic": "Server topic",
   "serverTopicSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed topic.",
   "tags_addNew": "Add new tag",
-  "tags_addExisting": "Add existing tag",
   "tags_backgroundColor": "Background color",
-  "tags_textColor": "Text color",
+  "tags_exist": "Tag exists",
   "pickColor": "Pick a color",
   "post": "Post",
   "postDeleted": "Post Deleted",
