Add localisations. Only submit poll votes on press of submit button. Prevent poll submission when not logged in. Change poll mode to switch.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -525,9 +525,18 @@
   "poll": "Poll",
   "addChoice": "Add choice",
   "pollDuration": "Poll duration",
-  "pollMode": "Poll mode",
-  "pollMode_single": "Single choice",
-  "pollMode_multiple": "Multiple choice",
+  "pollMode": "Allow multiple selections",
+  "pollShowResults": "Show results",
+  "pollHideResults": "Hide results",
+  "pollSubmitError": "Need to select at least one choice before submitting.",
+  "pollVotes": "{count} {count, plural, =1{vote} other{votes}}",
+  "@pollVotes": {
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
   "action_setLocation": "Set Action Location",
   "action_hide": "Hide",
   "action_appBar": "App Bar",
