Add support for piefed polls. (#317)
* Add support for piefed polls.
- Show poll posts.
- Vote on posts.
- Create posts.

* Add localisations.
Only submit poll votes on press of submit button.
Prevent poll submission when not logged in.
Change poll mode to switch.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -522,6 +522,21 @@
   "translate": "Translate",
   "user": "User",
   "subscribe": "Subscribe",
+  "poll": "Poll",
+  "addChoice": "Add choice",
+  "pollDuration": "Poll duration",
+  "pollMode": "Allow multiple selections",
+  "pollShowResults": "Show results",
+  "pollHideResults": "Hide results",
+  "pollSubmitError": "Need to select at least one choice before submitting.",
+  "pollVotes": "{count} {count, plural, =1{vote} other{votes}}",
+  "@pollVotes": {
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
   "action_setLocation": "Set Action Location",
   "action_hide": "Hide",
   "action_appBar": "App Bar",
