--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -117,6 +117,11 @@
   "serverFeedSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed feed.",
   "serverTopic": "Server topic",
   "serverTopicSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed topic.",
+  "tags_addNew": "Add new tag",
+  "tags_backgroundColor": "Background color",
+  "tags_exist": "Tag exists",
+  "tags_users": "Tagged users",
+  "pickColor": "Pick a color",
   "post": "Post",
   "postDeleted": "Post Deleted",
   "crossPosts": "Cross posts",
@@ -366,6 +371,7 @@
   "settings_debug_clearProfiles": "Clear profiles",
   "settings_debug_clearReadPosts": "Clear read posts",
   "settings_debug_clearFeedCache": "Clear feed cache",
+  "settings_debug_clearTags": "Clear user tags",
   "settings_debug_log": "Log",
   "profiles": "Profiles",
   "profile_switch": "Switch profiles",
