Allows adding and editing post flairs on piefed.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -450,6 +450,8 @@
       }
     }
   },
+  "editFlairs": "Edit flairs",
+  "addFlair": "Add flair",
   "viewSource": "View Source",
   "close": "Close",
   "banUser": "Ban User",
