Rework tag and flair ui

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -117,10 +117,11 @@
   "serverFeedSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed feed.",
   "serverTopic": "Server topic",
   "serverTopicSubtitle": "Feed inputs are merged on the server. Corresponds to a PieFed topic.",
-  "tags_addNew": "Add new tag",
-  "tags_backgroundColor": "Background color",
+  "color": "Color",
+  "tags_new": "New tag",
   "tags_exist": "Tag exists",
   "tags_users": "Tagged users",
+  "tags_noUsers": "No users found with that tag. Assign a tag to a user via their profile page to get started.",
   "pickColor": "Pick a color",
   "post": "Post",
   "postDeleted": "Post Deleted",
