Add check for renaming tag to already used tag.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,6 +13,7 @@
   "refreshAuth": "Refresh login",
   "totpToken": "TOTP Token (if needed)",
   "cancel": "Cancel",
+  "okay": "Okay",
   "rename": "Rename",
   "replace": "Replace",
   "continue_": "Continue",
