Add filter to modlog screen. Check add/remove status for lemmy log types.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -855,5 +855,10 @@
         "type": "String"
       }
     }
-  }
+  },
+  "modlog_all": "All",
+  "modlog_communityAdded": "Community added",
+  "modlog_communityRemoved": "Community removed",
+  "modlog_postLocked": "Post locked",
+  "modlog_postUnlocked": "Post unlocked"
 }
