--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -299,6 +299,7 @@
   "settings_coverMediaMarkedSensitive": "Cover up media marked as sensitive",
   "settings_fullImageSizeThreads": "Full image size for threads",
   "settings_fullImageSizeMicroblogs": "Full image size for microblogs",
+  "settings_hideEmojiReactions": "Hide emoji reactions",
   "settings_postsAsCards": "Show posts as cards",
   "settings_postLayoutOrder": "Post layout order",
   "settings_reduceAnimationMotion": "Reduce motion in animations",
