Add option to set default action for links.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -510,6 +510,8 @@
   "uploadFromGallery": "Upload from gallery",
   "uploadFromCamera": "Upload from camera",
   "openLink": "Open link",
+  "openLinkMenu": "Link menu",
+  "setLinkAction": "Set Link Action",
   "webView": "WebView",
   "browser": "Browser",
   "create_text": "Text",
