Add ability for moderators to lock posts on mbin and piefed.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -627,6 +627,7 @@
   "action_moderateMarkNSFW": "Mark NSFW",
   "action_moderateDelete": "Mod Delete",
   "action_moderateBan": "Ban",
+  "action_moderateLock": "Lock Post",
   "save": "Save",
   "saveChanges": "Save changes",
   "searchTheFediverse": "Search the fediverse",
