--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -403,6 +403,7 @@
   "originalPoster_long": "Original Poster",
   "pin": "Pin",
   "pinnedInCommunity": "Pinned in Community",
+  "lock": "Lock",
   "notSafeForWork_short": "NSFW",
   "notSafeForWork_long": "Not Safe For Work",
   "notSafeForWork_mark": "Mark NSFW",
