--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -404,6 +404,8 @@
   "originalPoster_long": "Original Poster",
   "pin": "Pin",
   "pinnedInCommunity": "Pinned in Community",
+  "lock": "Lock",
+  "locked": "Locked",
   "notSafeForWork_short": "NSFW",
   "notSafeForWork_long": "Not Safe For Work",
   "notSafeForWork_mark": "Mark NSFW",
@@ -630,6 +632,7 @@
   "action_moderateMarkNSFW": "Mark NSFW",
   "action_moderateDelete": "Mod Delete",
   "action_moderateBan": "Ban",
+  "action_moderateLock": "Lock Post",
   "save": "Save",
   "saveChanges": "Save changes",
   "searchTheFediverse": "Search the fediverse",
